--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
                 </span>
             </button>
             <button id="answer-button" class="custom-button">Join Call</button>
-            <button id="videocam-icon" class="hidden dark:bg-white-400 border border-gray-400 rounded-full p-3">
-                <img id="vid-image" src="./icons/video-24.png" alt="stop-video"></img>
+            <button id="videocam-icon" class="hidden bg-white-400 border border-gray-400 rounded-full dark:bg-white dark:border-gray-600">
+                <img id="vid-image" src="https://img.icons8.com/?size=24&id=PcUVqvF3yrks&format=png&color=000000" alt="stop-video" class="p-3">
+                </img>
             </button>
             <button id="hangup" class="text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm py-4 px-8 text-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900 hidden">End Call</button>
-            <button id="microphone-icon" class="hidden dark:bg-white-400 border border-gray-400 rounded-full p-3">
-                <img id="mic-image" src="./icons/mic-24.png" alt="mute"></img>
+            <button id="microphone-icon" class="hidden bg-white-400 border border-gray-400 rounded-full dark:bg-white dark:border-gray-600">
+                <img id="mic-image" src="./icons/mic-24.png" alt="mute" class="p-3"></img>
             </button>
             <div id="answerSection flex items-center justify-center" class="hidden">
                 <input type="text" id="offererUsername" class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-1/2 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-xs-light" placeholder="Enter ID">
@@ -54,7 +55,7 @@
             </div>
         </div>
     </div>
-    <div id="loading-overlay" class="fixed inset-0 bg-gray-800/10 flex items-center justify-center z-50 hidden">
+    <div id="loading-overlay" class="fixed inset-0 bg-gray-100/10 flex items-center justify-center z-50 hidden">
         <div role="status" class="absolute -translate-x-1/2 -translate-y-1/2 top-2/4 left-1/2">
             <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/><path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/></svg>
             <span class="sr-only">Loading...</span>
@@ -62,7 +63,7 @@
     </div>
     <div id="thankyou" class="hidden fixed inset-0 flex items-center justify-center bg-radial-[at_50%_75%] from-sky-50 via-blue-100 to-cyan-50 to-90% z-50">
         <div role="status" class="absolute -translate-x-1/2 -translate-y-1/2 top-2/4 left-1/2">
-              <h1 class="text-5xl font-semibold tracking-tight text-balance text-gray-800 sm:text-7xl">Thank you</h1>
+              <h1 class="text-3xl md:text-5xl lg:7xl font-semibold tracking-tight text-balance text-gray-800">Thank you</h1>
           </div>
       </div>
 </body>
